--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "lodash": "^4.17.21",
     "react": "*",
     "react-native": "*",
     "react-native-background-timer": "2.4.1",
