--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "jwt-decode": "^4.0.0",
@@ -58,6 +59,7 @@
     "react-native-watch-connectivity": "1.1.0",
     "react-native-webrtc": "118.0.2",
     "react-native-webview": "13.5.1",
+    "react-redux": "^9.1.2",
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
